# fastapi_celery

./: .gitignore  README.md  docker-compose.yml
src/: Dockerfile  main.py  pyproject.toml  task.py
